--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"YangWulve's Website",
+    "subTitle":"Focus on detection and segmentation, as well as style transfer.",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/54839060?u=3d0fb79d58806cf0be597ef020d462d8f54e8389&v=4",
     "GMEEK_VERSION":"last"
 }
